; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_print_double_f3.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_print_double_f3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%.3f\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @print_double_f3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @print_double_f3(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call double @VAL(i8* %7)
  store double %8, double* %6, align 8
  %9 = load double, double* %6, align 8
  %10 = call i64 @isnan(double %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i8* @print_double(i32* %13, i8* %14)
  store i8* %15, i8** %3, align 8
  br label %19

16:                                               ; preds = %2
  %17 = load double, double* %6, align 8
  %18 = call i8* @talloc_asprintf(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), double %17)
  store i8* %18, i8** %3, align 8
  br label %19

19:                                               ; preds = %16, %12
  %20 = load i8*, i8** %3, align 8
  ret i8* %20
}

declare dso_local double @VAL(i8*) #1

declare dso_local i64 @isnan(double) #1

declare dso_local i8* @print_double(i32*, i8*) #1

declare dso_local i8* @talloc_asprintf(i32*, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
